...
    <string name="addItemHint">Enter product name</string>
    <string name="cross">Cross</string>
    <string name="product_name_hint">Enter a product name</string>
    <string name="product_picture">Product picture</string>
    <string name="save">Save</string>
    <string name="input_shopping_list_name">Input shopping list name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_product">New product</string>
    <string name="product_title">Product</string>
    <string name="edit">Edit</string>
    <string name="in_shop">In shop</string>
    <string name="delete_shopping_list_question">Delete shopping list?</string>
    <string name="in_shop_ending_work_message">Done</string>
    <string name="change_list_name">Rename</string>
    <string name="product_image">Product image</string>
    <string name="view_holder" translatable="false">view_holder</string>
    <string name="pref_title">Settings</string>
    <string name="pref_cross_out_action">Cross out product</string>
    <string name="pref_key_cross_out_action" translatable="false">pref_key_cross_out_action</string>
    <string name="pref_cross_out_action_summary">Check a product by crossing out or just clicking</string>
    <string name="item_image">Product image</string>
    <string name="share">Share</string>
    <string name="delete">Remove</string>
    <string name="pref_key_show_images" translatable="false">Show images</string>
    <string name="pref_show_images">Show images</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="pref_key_email_host" translatable="false">pref_key_email_host</string>
    <string name="pref_key_email_port" translatable="false">pref_key_email_port</string>
    <string name="pref_key_email_login" translatable="false">pref_key_email_login</string>
    <string name="pref_key_email_password" translatable="false">pref_key_email_password</string>
    <string name="json_file_identifier" translatable="false">ShoppingList</string>
    <string name="wrong_email_protocol_exception_message">Supports only IMAP protocol</string>
    <string name="not_assigned">Not assigned</string>
    <string name="password_mask" translatable="false">******</string>
    <string name="action_receive_shopping_list_by_email">Receive shopping list by email</string>
    <string name="send">Send</string>
    <string name="loaded">loaded</string>
    <string name="action_save_list">Save list</string>
    <string name="action_remove_all_items">Remove all items</string>
    <string name="action_go_to_in_shop_activity">Go to in shop activity</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit_shopping_list">Edit</string>
    <string name="loading">Loading…</string>
...
    <string name="category_not_assigned">Category was not assigned</string>
    <string name="order">Order</string>
    <string name="no_name">No name</string>
    <string name="product_is_exist">Product with the same name is already exist.</string>
    <string name="divider" translatable="false">,</string>
    <string name="product_divider" translatable="false">;</string>
    <string name="load">Load</string>
    <string name="text_for_loading">Type or paste text in this format:\nMilk, 2;  Bread, 1; Wine, 3</string>
    <string name="menu_button_identifier">More options</string>
    <string name="without_category">Without category</string>
    <string name="pref_key_show_categories" translatable="false">pref_key_show_categories</string>
    <string name="pref_show_categories">Show categories</string>
    <string name="default_order" translatable="false">100</string>
    <string name="enter_order">Enter order</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email" translatable="false">d.zhiharev83@gmail.com</string>
    <string name="email_body_divider" translatable="false">--------------------------------------------------</string>
    <string name="HelpInShop2">To edit shopping list press button</string>
    <string name="HelpMain1">Welcome!\n\nThere are all yours shopping lists.\nAdd new lists, send by the e-mail and load them.</string>
    <string name="pref_show_images_summary">Show products and categories with images</string>
    <string name="pref_show_categories_summary">Separate products in window \"In shop\"</string>
    <string name="main_activity_title">All shopping lists</string>
    <string name="pref_key_show_help_in_main_activity" translatable="false">pref_key_show_help_in_main_screen</string>
    <string name="action_remove_checked">Remove checked products</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4981714129483110/3643326589</string>
    <string name="email_activity_not_found_exception_text">Not found email client application</string>
    <string name="category_name_hint">Enter category name</string>
    <string name="main_activity_no_data_text">Add the first shopping list</string>
    <string name="categories_list_activity_no_data_text">Add new categories</string>
    <string name="choose_category_activity_no_data_text">Categories list is empty</string>
    <string name="in_shop_activity_no_data_text">Shopping list is empty</string>
    <string name="editing_activity_no_data_text">Shopping list is empty. Add products.</string>
...
