...
    >
    <item android:title="@string/send_to_friend"
        android:id="@+id/action_send_to_friend"
        android:icon="@drawable/ic_send"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_edit_shopping_list"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item android:id="@+id/imgDelete"
        android:icon="@drawable/ic_remove_list"
        android:title="@string/delete"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item android:id="@+id/action_load_list"
        android:icon="@drawable/ic_load"
...
