<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:theme="@style/Base.Theme.AppCompat.Light.Dialog">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/input_shopping_list_name"
        android:id="@+id/inputNewListName"
        android:inputType="textCapSentences"
        android:imeOptions="flagNoExtractUi" />

</LinearLayout>